--- a/index.html
+++ b/index.html
@@ -149,24 +149,24 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Carleton University</h3>
+              <div class="subheading mb-3">Master of Applied Science M.A.Sc in Electrical and Computer Engineering</div>
+              <div>Systems and Computer Engineering - Web Development Track</div>
+              <p>GPA: 11.8/12</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">September 2017 - now</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
+              <h3 class="mb-0">Universidad Simon Bolivar</h3>
+              <div class="subheading mb-3">Computer Engineering</div>
               <p>GPA: 3.56</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 1993 - December 1999</span>
             </div>
           </div>
 
