--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Senior Presales Engineer / Product Manager</h3>
               <div class="subheading mb-3">ZTE de Venezuela - Caracas, Venezuela</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p>XXXX.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2013 - Present</span>
@@ -184,13 +184,13 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              XXXXXX</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Cross Browser Testing &amp; Debugging</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              XXXX</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
@@ -203,8 +203,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>..... </p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movie.</p>
         </div>
       </section>
 
@@ -216,7 +216,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Data Science Specialization</li>
             
           </ul>
         </div>
