--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           </div>
           <p class="lead mb-5">I am .....</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="http://ve.linkedin.com/in/enriquereveronyanes">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="http://github.com/EReveron">
               <i class="fab fa-github"></i>
             </a>
           </div>
