--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Enrique A. Rever&Oacute.n Yanes</span>
+        <span class="d-block d-lg-none">Enrique A. Rever&Oacuten Yanes</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -64,7 +64,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Enrique A.
-            <span class="text-primary">Rever&Oacute.n Yanes</span>
+            <span class="text-primary">Rever&Oacuten Yanes</span>
           </h1>
           <div class="subheading mb-5">1725 Riverside Drive· Ottawa, ON K1G 0E6 · (343) 988-8584 ·
             <a href="mailto:name@email.com">enrique.reveron@gmail.com</a>
