--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <span class="text-primary">September 2018 - Present</span>
             </div>
 		  
-		  
+		  <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Senior Presales Engineer / Product Manager</h3>
               <div class="subheading mb-3">ZTE de Venezuela - Caracas, Venezuela</div>
