--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 class="mb-0">Enrique A.
             <span class="text-primary">Rever&Oacuten Yanes</span>
           </h1>
-          <div class="subheading mb-5">1725 Riverside Drive· Ottawa, ON K1G 0E6 · (343) 988-8584 ·
+          <div class="subheading mb-5">1725 Frobisher Lane · Ottawa, ON K1G 0E6 · (343) 988-8584 ·
             <a href="mailto:enrique.reveron@gmail.com">enrique.reveron@gmail.com</a>
           </div>
           <p class="lead mb-5">I am .....</p>
