--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
           <div class="subheading mb-5">1725 Frobisher Lane · Ottawa, ON K1G 0E6 · (343) 988-8584 ·
             <a href="mailto:enrique.reveron@gmail.com">enrique.reveron@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am .....</p>
+          <p class="lead mb-5">I am a Computer Engineer from Latin America (Venezuela), currently pursuin a Master of Applied Science (MASc) 
+		  in Electrical and Computer Engineering in Carleton University, Ottawa, Canada.....</p>
           <div class="social-icons">
             <a href="http://ve.linkedin.com/in/enriquereveronyanes">
               <i class="fab fa-linkedin-in"></i>
